fix(textfield): prevent disappearing text field with negative z-index
Fixed an issue where text fields would disappear when their parent
had a background color due to negative z-index.

--- a/src/components/textfield/_textfield-filled.scss
+++ b/src/components/textfield/_textfield-filled.scss
@@ -12,7 +12,6 @@
     background-color: _token('enabled-fill-color');
     pointer-events: none;
     @include utils.absolute-fill();
-    z-index: -1;
   }
 
   &__filled &__floating-label {
