--- a/src/components/textfield/_textfield.scss
+++ b/src/components/textfield/_textfield.scss
@@ -33,6 +33,7 @@
     outline-style: none;
     padding: 0px;
     width: 100%;
+    z-index: 1;
 
     &::placeholder {
       color: _token('placeholder-color');
